[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ui/resources/font.ttf"

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = SubResource( 1 )

[node name="menu" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -500.0
margin_right = 800.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menu_content" type="Control" parent="menu_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu_panel/main_menu_content"]
margin_left = 200.0
margin_right = 1400.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "SPLICER PONG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_container" type="VBoxContainer" parent="menu_panel/main_menu_content"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -800.0
margin_right = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_game" type="Button" parent="menu_panel/main_menu_content/button_container"]
margin_right = 1200.0
margin_bottom = 57.0
size_flags_vertical = 2
theme = ExtResource( 1 )
text = "PLAY"

[node name="pause_content" type="Control" parent="menu_panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu_panel/pause_content"]
margin_left = 200.0
margin_right = 1400.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_container" type="VBoxContainer" parent="menu_panel/pause_content"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -800.0
margin_right = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_game" type="Button" parent="menu_panel/pause_content/button_container"]
margin_right = 1200.0
margin_bottom = 57.0
theme = ExtResource( 1 )
text = "RESUME"

[node name="game_over_content" type="Control" parent="menu_panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="menu_panel/game_over_content"]
margin_left = 200.0
margin_right = 1400.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "YOU WON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_container" type="VBoxContainer" parent="menu_panel/game_over_content"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -800.0
margin_right = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart_game" type="Button" parent="menu_panel/game_over_content/button_container"]
margin_right = 1200.0
margin_bottom = 57.0
theme = ExtResource( 1 )
text = "PLAY AGAIN"

[connection signal="pressed" from="menu_panel/main_menu_content/button_container/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="menu_panel/pause_content/button_container/resume_game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="menu_panel/game_over_content/button_container/restart_game" to="." method="_on_start_game_pressed"]
